updated license in npm json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "utility"
   ],
   "author": "jesse keane",
-  "license": "BSD",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ibanishapurr/project2/issues"
   }
