--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "dotpath lookup module",
   "main": "index.js",
   "scripts": {
-    "test": "node test/test.js"
+    "test": "node test/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jarofghosts/dotpather/issues"
+  },
+  "devDependencies": {
+    "tape": "^2.13.4"
   }
 }
