--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "standard index.js test/index.js",
-    "test": "node test/index.js && npm run lint",
+    "test": "jest",
     "typecheck": "tsc"
   },
   "repository": {
@@ -22,8 +22,11 @@
     "url": "https://github.com/jarofghosts/dotpather/issues"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.5",
+    "jest": "^29.7.0",
     "standard": "^5.4.1",
     "tape": "^4.4.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
 }
